2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am: Fix bugreport script not having
	a full-path (Closes: #526664)

2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_load_media_device):
	Fix break-statement follow-through crasher when
	trying to load audio CDs, spotted by Stephen Moehle
	<stephen.moehle@gmail.com> (Closes: #526563)

2008-04-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_subtitled): If the subtitle
	file isn't local, try to get its local FUSE path via
	GVFS (Closes: #520910)
	* src/totem-uri.c (totem_add_subtitle): Allow loading remote
	subtitles for all the backends

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c (add_drive_to_menu): Remove debug

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c (add_drive_to_menu), (update_drive_menu_items):
	Better media menu support through GIO

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/override_common.c:
	* bindings/python/override_common.h: Fix missing
	exception, the code was relicensed as part of the
	plugins code relicensing already (Helps: #525856)

2008-04-03  Bastien Nocera  <hadess@hadess.net>

        * src/backend/bacon-video-widget-gst-0.10.c
	(bvw_update_interface_implementations):
	Fix unreffing a non-reffed element, fixes warnings
	when ximagesink is forced (Closes: #524807)
	Patch from Sjoerd Simons <sjoerd@luon.net>

2008-03-28  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Don't fall over if the YouTube
	servers return HTTP errors.

2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/publish/totem-publish.c:
	(totem_publish_plugin_media_cb): Patch from  Mathias Hasselmann
	<mathias.hasselmann@gmx.de> to properly unref the input stream in
	the publish plugin. (Closes: #512589)

2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>
